--- a/doc/workflow/development/development.tex
+++ b/doc/workflow/development/development.tex
@@ -29,6 +29,10 @@
     \item Add some kind of sensible item-hierarchy system \checkmark
     \item Fix item system \checkmark
     \item Flesh out the slots for equipping something
+    \item Implement actual game loop
+    \item Implement command system
+    \item Improve the "get" system so it can take adjectives. This 
+        probably implies improving the InfoModule aswell.
 \end{enumerate}
 
 \subsubsection*{Details}
@@ -48,6 +52,8 @@
         fault doesn't occur when soul enters room that doesn't have
         info
     \item Make everything const
+    \item Organize members alphabetically (or some other way that
+        makes sense)
 \end{enumerate}
 
 
