--- a/doc/workflow/ideas/ideas.tex
+++ b/doc/workflow/ideas/ideas.tex
@@ -46,10 +46,13 @@
 
 \end{enumerate}
 
-\subsection*{Possible Commands} \subsubsection*{Weaponry} jab, light
-swing, medium swing, heavy swing, parry, guard, special
+\subsection*{Possible Commands}
 
-\subsubsection*{Clothing} wear
+Commands are [noun] [verb] [location]. There must always be a verb. 
+Sometimes that verb requires a noun (i.e. - get item). 
+Optionally, one may specify a location (i.e. - get item from 
+container). Words like "from" etc. will just be ignored. Don't spend 
+too much time on this; it's not really relevant.
 
 \bigskip
 \bigskip
@@ -70,12 +73,33 @@ swing, medium swing, heavy swing, parry, guard, special
     \item Card Game like FF8 or FF9
     \item A primary tower-dungeon like Sword Art Online (but with a 
         whole world built around it; it doesn't consist of just the
-        tower-dungeon).
-    \item Play some .Hack and see how that combat is.
-    \item No one can see each other's level, equipment, etc.  
+        tower-dungeon). The dungeon is randomly generated. The world
+        is not.
+    \item Circular world? Dungeon in the center with many floors.
+        Each floor randomly generates.
+    \item No one can see each other's level or equipment
         explicitely (only how it looks, how strong a person is, etc.)
+        You can see HP, though.
     \item NEURO: Concentrate for special attack. Black and white.  
         Soothing voice: "Breath..." Everything around silences.
+    \item Anonymous skills (you don't know why you get them, they 
+        just appear) and skill requirements. The skill "tree"
+        branches from that single skill. Think: "Dual-wielding" in 
+        SwordArt.
+    \item No map/radar/etc. Maybe have a paper item on which players
+        can draw a map of the world. They won't have "You are Here"
+        on them, though. It's just a regular map. 
+    \item No "whispering" (what the fuck is that shit). Sent mail
+        messages will take some time to get to their respective party.
+        Chat will be done when two characters are face to face (or
+        via some magic).
+    \item Long-distance magics that target some player; maybe
+        something like a gateway that will allow communication 
+        between two parties; a black-magic caster must use this,
+        for example
+    \item Long respawn timer. Soul leaves "soulfire" item upon death. 
+        People can pick it up, respawn it, etc. Really decentivize 
+        death.
 
 
 \end{itemize}
